fixed header spacing for desktop

--- a/src/styling/index.css
+++ b/src/styling/index.css
@@ -22,7 +22,7 @@
 }
 .headerLogoImageDesktop {
     min-width: 200px;
-    
+
 }
 
 .footerMobileGrid {
@@ -81,8 +81,6 @@
     grid-column-end: 3;
     grid-row-start:1;
     grid-row-end:3;
-    display: grid;
-    grid-template-columns: 25% 50% 25%;
 }
 .volDisplayMobile {
     grid-column-start: 1;
